--- a/PrinterVendor/package.json
+++ b/PrinterVendor/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-otp-input": "^3.1.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.6.3"
   },
