--- a/PrinterVendor/package.json
+++ b/PrinterVendor/package.json
@@ -24,7 +24,10 @@
     "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
     "react-phone-input-2": "^2.15.1",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
+    "toast": "^0.5.4",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
