--- a/PrinterVendor/.env
+++ b/PrinterVendor/.env
@@ -1,2 +1,3 @@
 # https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=3f30a51417604d87ba59f9299779f07e
+VITE_API_URL=https://projectp-ibon.onrender.com
